@startuml

package "de.andrena.codingaider.toolwindow" {
    class PersistentFilesToolWindow {
        +createToolWindowContent(project: Project, toolWindow: ToolWindow)
    }

    class PersistentFilesComponent {
        +getContent(): JComponent
        +addPersistentFiles()
        +toggleReadOnlyMode()
        +removeSelectedFiles()
        +loadPersistentFiles()
    }

    class PersistentFileRenderer {
        +getListCellRendererComponent(list: JList, value: Object, index: int, isSelected: boolean, cellHasFocus: boolean): Component
    }

    PersistentFilesToolWindow --> PersistentFilesComponent
    PersistentFilesComponent --> PersistentFileRenderer
}

package "de.andrena.codingaider.services" {
    class PersistentFileService
}

package "de.andrena.codingaider.command" {
    class FileData {
        +filePath: String
        +isReadOnly: boolean
    }
}

PersistentFilesComponent --> PersistentFileService
PersistentFilesComponent --> FileData

@enduml
